# hopfield

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  X.txt  corrupted.txt  hopfield  main.cpp  memory.cpp  memory.h  model.cpp  model.h  reconstructed.csv  test.csv
.github/workflows/: cmake_macos.yml  cmake_ubuntu.yml  compile.yml  main.yml  nometal.yml  run_ubuntu.yml
include/: device.h  matrix_helper.h  memory.h  model.h  mtlpp.hpp  reader.h  stopwatch.h  writer.h
interfaces/: device_I.h  memory_I.h  model_I.h  reader_I.h  stopwatch_I.h  writer_I.h
shaders/: matrix.metal  matrixvector.metal
src/: device.cpp  matrix_helper.cpp  memory.cpp  model.cpp  mtlpp.mm  reader.cpp  stopwatch.cpp  writer.cpp
tests/: test.h  tests.h
